--- a/main.html
+++ b/main.html
@@ -1,16 +1,117 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8" />
+  <title>Book Library</title>
+  <style>
+    body {
+      background-color: #f8f8f8;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 40px 20px;
+      display: flex;
+      justify-content: center;
+    }
 
+    .book-library {
+      background-color: #ffffff;
+      max-width: 1000px;
+      padding: 30px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      display: flex;
+      gap: 30px;
+      flex-wrap: wrap;
+      justify-content: center;
+      border-radius: 8px;
+    }
+
+    .book {
+      width: 220px;
+      background: #fff;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      padding: 15px;
+      box-sizing: border-box;
+      text-align: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      transition: transform 0.2s ease;
+    }
+
+    .book:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+    }
+
+    .book img {
+      width: 100%;
+      height: 280px;
+      object-fit: cover;
+      border-radius: 4px;
+    }
+
+    .book-title {
+      font-weight: bold;
+      font-size: 1.1rem;
+      color: #333;
+      margin: 0;
+    }
+
+    .book-author {
+      color: #777777;
+      font-size: 0.9rem;
+      margin: 0;
+    }
+
+    .book-price {
+      color: #2ecc71;
+      font-weight: 600;
+      font-size: 1rem;
+      margin-top: auto; /* pushes price to bottom if needed */
+    }
+
+    @media (max-width: 700px) {
+      .book-library {
+        justify-content: center;
+        gap: 20px;
+      }
+      .book {
+        width: 160px;
+      }
+      .book img {
+        height: 210px;
+      }
+    }
+  </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  <div class="book-library">
+
+    <div class="book">
+      <img src="https://images-na.ssl-images-amazon.com/images/I/81qRvxXs+zL.jpg" alt="Spy in the Amber" />
+      <h3 class="book-title">Spy in the Amber</h3>
+      <p class="book-author">Author: Avinash Paliwal</p>
+      <p class="book-price">$15.99</p>
+    </div>
+
+    <div class="book">
+      <img src="https://images-na.ssl-images-amazon.com/images/I/81CyXxuOHvL.jpg" alt="Sacred Games" />
+      <h3 class="book-title">Sacred Games</h3>
+      <p class="book-author">Author: Vikram Chandra</p>
+      <p class="book-price">$12.99</p>
+    </div>
+
+    <div class="book">
+      <img src="https://images-na.ssl-images-amazon.com/images/I/71C-N5TbqvL.jpg" alt="Byomkesh Bakshi" />
+      <h3 class="book-title">Byomkesh Bakshi</h3>
+      <p class="book-author">Author: Sharadindu Bandyopadhyay</p>
+      <p class="book-price">$10.99</p>
+    </div>
+
+  </div>
 
 </body>
-
 </html>
