--- a/main.html
+++ b/main.html
@@ -10,7 +10,14 @@
       margin: 0;
       padding: 40px 20px;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 30px;
+      color: #333;
     }
 
     .book-library {
@@ -52,7 +59,7 @@
       border-radius: 4px;
     }
 
-    .book-title {
+    .book h2 {
       font-weight: bold;
       font-size: 1.1rem;
       color: #333;
@@ -66,10 +73,13 @@
     }
 
     .book-price {
-      color: #2ecc71;
+      background-color: #2ecc71;
+      color: white;
+      border-radius: 4px;
       font-weight: 600;
       font-size: 1rem;
-      margin-top: auto; /* pushes price to bottom if needed */
+      padding: 8px 0;
+      margin-top: auto; /* push price block to bottom */
     }
 
     @media (max-width: 700px) {
@@ -88,27 +98,29 @@
 </head>
 <body>
 
+  <h1>Book Library</h1>
+
   <div class="book-library">
 
     <div class="book">
       <img src="https://images-na.ssl-images-amazon.com/images/I/81qRvxXs+zL.jpg" alt="Spy in the Amber" />
-      <h3 class="book-title">Spy in the Amber</h3>
+      <h2>Spy in the Amber</h2>
       <p class="book-author">Author: Avinash Paliwal</p>
-      <p class="book-price">$15.99</p>
+      <div class="book-price">$15.99</div>
     </div>
 
     <div class="book">
       <img src="https://images-na.ssl-images-amazon.com/images/I/81CyXxuOHvL.jpg" alt="Sacred Games" />
-      <h3 class="book-title">Sacred Games</h3>
+      <h2>Sacred Games</h2>
       <p class="book-author">Author: Vikram Chandra</p>
-      <p class="book-price">$12.99</p>
+      <div class="book-price">$12.99</div>
     </div>
 
     <div class="book">
       <img src="https://images-na.ssl-images-amazon.com/images/I/71C-N5TbqvL.jpg" alt="Byomkesh Bakshi" />
-      <h3 class="book-title">Byomkesh Bakshi</h3>
+      <h2>Byomkesh Bakshi</h2>
       <p class="book-author">Author: Sharadindu Bandyopadhyay</p>
-      <p class="book-price">$10.99</p>
+      <div class="book-price">$10.99</div>
     </div>
 
   </div>
